[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/piramides_fondo.png" type="Texture" id=1]
[ext_resource path="res://GameFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Piramide.gd" type="Script" id=3]
[ext_resource path="res://scenes/PlayerPiramide.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Cronometro.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/RespuestaIncorrecta.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/PixelEmulator-xq08.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/TiempoTerminado.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 19
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 7 )

[node name="Piramide" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelEcuacion" type="Label" parent="HUD"]
margin_left = 254.0
margin_top = 6.0
margin_right = 346.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelOpcion1" type="Label" parent="HUD"]
margin_left = 56.0
margin_top = 194.0
margin_right = 130.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelOpcion2" type="Label" parent="HUD"]
margin_left = 248.0
margin_top = 238.0
margin_right = 322.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LabelOpcion3" type="Label" parent="HUD"]
margin_left = 440.0
margin_top = 286.0
margin_right = 514.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelPuntos" type="Label" parent="HUD"]
margin_left = 102.0
margin_top = 376.0
margin_right = 230.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LabelErrores" type="Label" parent="HUD"]
margin_left = 344.0
margin_top = 376.0
margin_right = 408.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LabelRecord" type="Label" parent="HUD"]
margin_left = 508.0
margin_top = 376.0
margin_right = 640.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.901961, 0, 0, 1 )
text = "15"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Cronometro" parent="HUD" instance=ExtResource( 5 )]
margin_left = 52.0
margin_top = 288.0
margin_right = 52.0
margin_bottom = 288.0

[node name="RespuestaIncorrecta" parent="HUD" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 146.0
margin_top = 120.0
margin_right = 146.0
margin_bottom = 120.0

[node name="TiempoTerminado" parent="HUD" instance=ExtResource( 8 )]
visible = false
margin_left = 146.0
margin_top = 120.0
margin_right = 146.0
margin_bottom = 120.0

[node name="PlayerPiramide" parent="." instance=ExtResource( 4 )]
position = Vector2( 90, 122 )
[connection signal="times_up" from="HUD/Cronometro" to="." method="_on_Cronometro_times_up"]
[connection signal="resume_game" from="HUD/RespuestaIncorrecta" to="." method="_on_RespuestaIncorrecta_resume_game"]
[connection signal="resume_game" from="HUD/TiempoTerminado" to="." method="_on_TiempoTerminado_resume_game"]
[connection signal="option_selected" from="PlayerPiramide" to="." method="_on_PlayerPiramide_option_selected"]
